main is completed

--- a/index.html
+++ b/index.html
@@ -46,10 +46,173 @@
 
     <main>
         <div class="main1">
-
+            <section class="container1">
+                <div class="cart" id="teachers">
+                     <h2>Teachers</h2>
+                     <div class="cart__img cart-1"></div>
+                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quas iure quae minus magnam harum?</p>
+                     <a class="cart__link" href="">more</a>
+                 </div>
+                 <div class="cart" id="program">
+                     <h2>Program</h2>
+                     <div class="cart__img cart-2"></div>
+                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quas iure quae minus magnam harum?</p>
+                    <a class="cart__link" href="">more</a>
+                  </div>
+                  <div class="cart" id="classes">
+                     <h2>Classes</h2>
+                     <div class="cart__img cart-3"></div>
+                     <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quas iure quae minus magnam harum?</p>
+                    <a class="cart__link" href="">more</a>
+                  </div>
+                  <div class="cart" id="gallery">
+                     <h2>Gallery</h2>
+                     <div class="cart__img cart-4"></div>
+                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quas iure quae minus magnam harum?</p>
+                    <a class="cart__link" href="">more</a>
+                  </div>
+             </section>
         </div>
         
     </main>
+
+    <!-- ------------------SECTION BODY 2 -->
+<div class="body1">
+    <div class="container">
+        <div class="body__box">
+            <div>
+                <h1 class="body__title">INNOVATIVE METHODS<br>OF TEACHING</h1>
+                <h2 class="body__subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A fugiat illo commodi cum, illum beatae laborum debitis, distinctio sed ipsam, perspiciatis maxime rerum autem earum non fuga temporibus inventore rem.</h2>
+                <div class="body__icons">
+                 <div>
+                    <div>
+                        <i class="far fa-thumbs-up"></i>
+                        <p id="icons__text">good comunication</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-baby"></i>
+                        <p id="icons__text">healthy massage</p>
+                    </div>
+                    <div>
+                        <i class="far fa-smile-wink"></i>
+                        <p id="icons__text">positive being</p>
+                    </div>
+                    <div>
+                        <i class="fas fa-brain"></i>
+                        <p id="icons__text">mental math</p>
+                    </div>
+              </div>
+              <div>
+                <div>
+                    <i class="fas fa-birthday-cake"></i>
+                    <p id="icons__text">amazing barties</p>
+                </div>
+                <div>
+                    <i class="fas fa-trophy"></i>
+                    <p id="icons__text">sport compatitions</p>
+                </div>
+                <div>
+                    <i class="fas fa-heart"></i>
+                    <p id="icons__text">loving the world</p>
+                </div>
+                <div>
+                    <i class="fas fa-quran"></i>
+                    <p id="icons__text">Quran</p>
+                </div>
+          </div>
+              </div>
+            </div>
+                <div>
+                  <img class="body__img1" src="./assets/10.jpg">
+                  <img class="body__img2" src="./assets/5.jpg">
+                  <img class="body__img3" src="./assets/11.jpg">
+             </div>
+        </div>
+    </div>
+</div>
+<div class="dur"></div>
+<!-------------------------------<section staff>-------------------------->
+<div class="staff">
+   <div class="container">
+       <h1>OUR STAFF</h1>
+       <p>LOREM IPSUM DOLOR SIT AMET CONSE CTETUR ADIPISICING ELIT, SED DO EIUSMOD TEMPOR INCIDIDUNT UT LABORE ET DOLORE MAGNA. IPSUM DOLOR SIT AMET CONSE CTETUR ADIPISICING ELIT.</p>
+         <div class="staff__img">
+            <div>
+              <img id="staff" src="./assets/t2.jpg">
+              <P id="teacher">ALEXA SMITH</P>
+              <p>art teacher</p>
+            </div>
+            <div>
+                <img id="staff" src="./assets/t4.jpg">
+                <p id="teacher">JECICA MILLER</p>
+                <p>teacher</p>
+            </div>
+            <div>
+                <img id="staff" src="./assets/t3.jpg">
+                <P id="teacher">LINDY MORGAN</P>
+                <p>CEO</p>
+            </div>
+            <div>
+                <img id="staff" src="./assets/t7.jpg">
+                <P id="teacher">ADAM WOLF</P>
+                <p>DIRECTOR</p>
+            </div>
+            <div>
+                <img id="staff" src="./assets/t6.jpg">
+                <P id="teacher">HADICHA USMAN</P>
+                <P>Quran teacher</P>
+            </div>
+            <div>
+                <img id="staff" src="./assets/t8.jpg">
+                <P id="teacher">MARTIN KELL</P>
+                <p>music teacher</p>
+            </div>
+         </div>
+    </div>
+</div>
+<!------------------------ section videos ------------------>
+<div class="video">
+    <div class="container">
+        <h1>PHOTO VIDEO</h1>
+        <div class="video__img">
+             <img id="video__img" src="./assets/12.jpg">
+             <img id="video__img" src="./assets/13.jpg">
+             <img id="video__img" src="./assets/14.jpg">
+             <img id="video__img" src="./assets/7.jpg">
+        </div>
+        <div class="video__img">
+            <img id="video__img" src="./assets/img2.jpg">
+            <img id="video__img" src="./assets/img2.jpg">
+            <img id="video__img" src="./assets/img2.jpg">
+            <img id="video__img" src="./assets/img2.jpg">
+       </div>
+    </div>
+</div>
+<!--------------- section contact------------- -->
+<div class="contact">
+    <div class="container">
+        <h1>CONTACTS</h1>
+        <div class="contact__boxs">
+            <div class="contact__box1">
+                <h2 class="contact__title1">our address</h2>
+                <div class="contact__subtitle1">
+                    <p>8901 Marmora Road,<br>Glasgow, D04 89GR.</p>
+                    <p>Telephone: +1 800 123 1234<br>E-mail: <a href=""> mail@demosite.com</a></p>
+                </div>
+                <img id="contact__img" src="./assets/15.jpg">
+           </div>
+           <div>
+               <h2 class="contact__title2">Contact us</h2>
+
+           </div>
+        </div>
+    </div>
+</div>
+<!------ section mapp---- -->
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11991.705975339797!2d69.19117566331202!3d41.28870421674283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8a2c4221b543%3A0xd1a26b75322610f2!2z0KfQuNC70LDQvdC30LDRgC05LCDQotCw0YjQutC10L3Rgiwg0KPQt9Cx0LXQutC40YHRgtCw0L0!5e0!3m2!1sru!2s!4v1643478873272!5m2!1sru!2s" width="1500" height="420" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+<!------------------ section footer ------------------->
+
 
 
     <footer>
